syntax = "proto3";

package kafkalib.msg;

import "google/protobuf/timestamp.proto";
import "kafkalib/msg/tenant_meta.proto";
import "kafkalib/opts/opts.proto";

message UserEvent {
  option (kafkalib.opts.topic_name) = "user-event";

  string user_uuid = 30;
  int64 user_id = 31;

  TenantMeta tenant_meta = 50;

  google.protobuf.Timestamp create_timestamp = 100;

  message RegistrationSuccess {
    string email = 1;
    bool email_verified = 2;
    string first_name = 3;
    string last_name = 4;
    string phone = 5;
    string user_created_by = 6;
  }

  message EmailVerified {
    string email = 1;
  }

  message VoucherCreated {
    string code = 1;
    string voucher_type = 2;
    string status = 3;
    string promotion_id = 4;
    string expired_at = 5;
    int64 generated_year = 6;
    int64 redemption_limit = 7;
  }

  oneof body {
    RegistrationSuccess registration_success = 1;
    EmailVerified email_verified = 2;
    VoucherCreated voucher_created = 3;
  }
}
